# GBAStation

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  linuxbuild.sh  macosbuild.sh  main.cpp  switchbuild.sh  windowsbuild.bat  windowsrun.bat
.github/: copilot-instructions.md
assets/: aarch.drawio
example/: chat.md
example/shaders/: ufo.glslp
example/shaders/auto-box/: box-center.glsl  box-max.glsl  box.glsl
example/shaders_glsl/linear/: linear-gamma-correct.glsl
example/shaders_glsl/phosphor-dot v3.3/: 2x-Dot.glslp  2x-Scanline+ScaleFX.glslp  2x-Scanline-diffusion+ScaleFX.glslp  2x-Scanline-diffusion.glslp  2x-Scanline.glslp  CRT+ScaleFX.glslp  CRT+nnedi3.glslp  CRT-curve.glslp  CRT-diffusion+ScaleFX.glslp  CRT-diffusion+nnedi3.glslp  CRT-diffusion.glslp  CRT.glslp  Dot+ScaleFX.glslp  Dot+nnedi3.glslp  Dot-bloom.glslp  Dot-clear.glslp  Dot-diffusion.glslp  LCD+ScaleFX.glslp  LCD.glslp  Scanline-diffusion.glslp  Scanline-thin.glslp  Scanline.glslp  SquarePixel-diffusion-dot.glslp  SquarePixel-diffusion-line.glslp  SquarePixel.glslp  denseDot+ScaleFX.glslp  denseDot+nnedi3.glslp  denseDot-diffusion+ScaleFX.glslp  denseDot-diffusion+nnedi3.glslp  fast-2x-Dot.glslp  fast-Dot+ScaleFX.glslp  fast-Dot.glslp
include/: common.hpp
include/Audio/: AudioManager.hpp  BKAudioPlayer.hpp
include/Control/: GameInputController.hpp  InputMapping.hpp
include/Game/: DisplayConfig.hpp  GameRuntime.hpp  GlslpLoader.hpp  LibretroLoader.hpp  ShaderChain.hpp  game_view.hpp
include/Retro/: LibretroLoader.hpp
include/UI/: List_view.hpp  StartPageView.hpp  game_view.hpp  template.hpp
include/UI/Pages/: AboutPage.hpp  AppPage.hpp  BackGroundPage.hpp  DataPage.hpp  FileListPage.hpp  GameLibraryPage.hpp  ImageView.hpp  SettingPage.hpp
include/UI/Utils/: BKAnimator.hpp  GameMenu.hpp  ImageFileCache.hpp  ProImage.hpp  Utils.hpp
include/Utils/: fileUtils.hpp
include/Video/: RenderChain.hpp
include/Video/renderer/: GLSLPParser.hpp  RetroShaderPipeline.hpp
include/XMLUI/: StartPageView.hpp
include/XMLUI/Pages/: FileListPage.hpp  ImageView.hpp
include/XMLUI/Utils/: Utils.hpp
old/: main.cpp
old/include/: common.hpp
old/include/UI/: StartPageView.hpp
old/include/Utils/: ConfigManager.hpp  strUtils.hpp
old/include/Video/: DisplayConfig.hpp
old/src/: common.cpp
old/src/Audio/: AudioManager.cpp  AudioManager.hpp  BKAudioPlayer.hpp
old/src/Control/: InputMapping.cpp
old/src/Game/: game_view.cpp
old/src/Retro/: LibretroLoader.cpp
old/src/UI/: StartPageView.cpp
old/src/Utils/: fileUtils.cpp  strUtils.cpp
old/src/Video/: DisplayConfig.cpp  RenderChain.cpp
report/: 2026-03-22-auto-fill-gamedata-shader-path.md  2026-03-22-fix-cheat-crash-and-remove-delete.md  2026-04-01-rewind-fps-animation-refactor.md  2026-04-03-data-management-page.md  2026-04-03-joystick-input-multicombo-keybind.md  GridBox_工作汇报.md  audio_fix_report.md  fix_fastforward_freeze_report.md  fix_report.md  fix_report_round4.md  retroarch_shader_compat_port_report.md  session_01.md  session_03.md  session_05.md  session_06.md  session_07.md  session_09.md  session_10.md  session_100.md  session_100_analysis.md  session_101.md  session_101_analysis.md  session_102.md  session_102_analysis.md  session_103.md  session_103_analysis.md  session_104.md  session_105.md  session_106.md  session_107.md  session_108.md  session_109.md  session_110.md  session_111.md  session_112.md  session_113.md  session_114.md  session_115.md  session_116.md  session_117.md  (+92 more)
resources/i18n/en-US/: beiklive.json
resources/i18n/zh-Hans/: beiklive.json  demo.json
resources/shaders/: crt_simple.glsl  crttt.glslp  example.glslp  passthrough.glsl  scanlines.glsl  sharpen.glsl
resources/sounds/: README.md
resources/xml/cells/: cell.xml
src/: common.cpp  main.cpp
src/Audio/: AudioManager.cpp  BKAudioPlayer.cpp
src/Control/: GameInputController.cpp  InputMapping.cpp
src/Game/: DisplayConfig.cpp  GameRuntime.cpp  GlslpLoader.cpp  LibretroLoader.cpp  ShaderChain.cpp  game_view.cpp
src/Retro/: LibretroLoader.cpp
src/UI/: List_view.cpp  StartPageView.cpp  game_view.cpp
src/UI/Pages/: AboutPage.cpp  AboutPage.hpp  AppPage.cpp  BackGroundPage.cpp  DataPage.cpp  FileListPage.cpp  GameLibraryPage.cpp  ImageView.cpp  SettingPage.cpp  SettingPage.hpp
src/UI/Utils/: BKAnimator.cpp  GameMenu.cpp  ImageFileCache.cpp  ProImage.cpp  ProImage.hpp  Utils.cpp  captioned_image.cpp  styles.cpp
src/Utils/: ConfigManager.cpp  Tools.cpp  Tools.hpp
src/Video/: RenderChain.cpp
src/Video/renderer/: DirectQuadRenderer.hpp  FrameUploader.cpp  FrameUploader.hpp  FullscreenQuad.cpp  GLSLPParser.cpp  RetroShaderPipeline.cpp  ShaderCompiler.cpp
src/XMLUI/: StartPageView.cpp
src/XMLUI/Pages/: AppPage.cpp  BackGroundPage.cpp  FileListPage.cpp  ImageView.cpp
src/XMLUI/Utils/: Utils.cpp  styles.cpp
src/core/: ConfigManager.cpp  DataBase.cpp  DataBase.hpp  GameSignal.hpp  GameTimer.hpp  Tools.cpp  Tools.hpp  common.cpp  common.h  constexpr.h  enums.h  game_database.cpp  game_database.hpp  styles.cpp
src/game/audio/: AudioManager.cpp  AudioManager.hpp
src/game/control/: GameInputManager.cpp  GameInputManager.hpp  InputMap.cpp  InputMap.hpp  Readme.md
src/game/mgba/: GameRun.cpp  GameRun.hpp
src/game/render/: DirectQuadRenderer.cpp  FrameUploader.cpp  FullscreenQuad.cpp  GLSLPParser.cpp  GLSLPParser.hpp  GameRenderer.cpp  GameRenderer.hpp  GameTexture.cpp  GameTexture.hpp  RenderChain.cpp  RenderChain.hpp  RetroShaderPipeline.cpp  RetroShaderPipeline.hpp  ShaderCompiler.cpp
src/game/retro/: LibretroLoader.cpp  LibretroLoader.hpp
src/ui/audio/: BKAudioPlayer.cpp  BKAudioPlayer.hpp
src/ui/layout/: Layout.cpp  Layout.hpp  SwitchLayout.cpp  SwitchLayout.hpp
src/ui/page/: AboutPage.cpp  AboutPage.hpp  DataManagementPage.cpp  DataManagementPage.hpp  FileListPage.cpp  FileListPage.hpp  GameDetailPage.cpp  GameDetailPage.hpp  GameLibraryPage.cpp  GameLibraryPage.hpp  GamePage.cpp  GamePage.hpp  SettingPage.cpp  SettingPage.hpp  StartPage.cpp  StartPage.hpp  StartPageFrame.cpp  StartPageFrame.h  (+1 more)
(+112 files in other folders)
